--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -1,7 +1,6 @@
 server {
   listen 80;
-  listen [::]:80;
-  server_name localhost;
+  server_name wp.local;
 
   root /var/www/html;
 
@@ -23,5 +22,17 @@ server {
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param SCRIPT_NAME $fastcgi_script_name;
   }
+
+}
+
+server {
+  listen 80;
+  server_name metrics.local;
+
+location / {
+     proxy_pass         http://localhost:3000;
+     proxy_set_header   Host $host;
+}
+
 
 }
