--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -30,7 +30,7 @@ server {
   server_name metrics.local;
 
 location / {
-     proxy_pass         http://localhost:3000;
+     proxy_pass         http://grafana:3000;
      proxy_set_header   Host $host;
 }
 
